fixed header on mobile

--- a/index.css
+++ b/index.css
@@ -151,3 +151,30 @@ ul li a{
     height: 15vh;
     padding-right: 1%; 
 }
+
+/*
+W3Schools
+Selector (Classname/Id-name form HTML){
+All your styles go inside here
+PropertyName: Value (#- px, vw,vw,em), color (rgb, rgba, "blue"), dotted, dashed) ; <- Terminate with semicolon
+PropertyName: Value (#- px, vw,vw,em), color (rgb, rgba, "blue"), dotted, dashed) ; <- Terminate with semicolon
+PropertyName: Value (#- px, vw,vw,em), color (rgb, rgba, "blue"), dotted, dashed) ; <- Terminate with semicolon
+PropertyName: Value (#- px, vw,vw,em), color (rgb, rgba, "blue"), dotted, dashed) ; <- Terminate with semicolon
+}
+*/
+@media only screen and  (max-width: 450px){
+    header{
+        width: 110vw; 
+        height: 15vh; 
+        padding-top: 0.5vh; 
+        padding-bottom:0.5vh; 
+        padding-left: 0.5vw;
+        padding-right: 0.5vw; 
+    }
+    #logotxt{
+        padding-top: 0.4vh; 
+        padding-bottom: -0.2vh !important;
+        padding-left: 0.4vw;
+        padding-right: 0.4vw;
+    }
+}
